# cmc

./: Cargo.toml  README.md
cm-client/: Cargo.toml  README.md
cm-client/src/: cli.rs
cm-client/src/mode/: get.rs  latest.rs  mod.rs  search.rs
cm-client/src/tui/: mod.rs  search.rs  term.rs
cmg/: Cargo.toml
cmg/src/: cli.rs  main.rs
cmg/src/mode/: get.rs  latest.rs  mod.rs  search.rs
cmg/src/tui/: state.rs
crackmes/: Cargo.toml  README.md
crackmes/src/: error.rs  lib.rs  list.rs  macros.rs  overview.rs
src/: cli.rs  crackme.rs  get.rs  macros.rs  main.rs  parser.rs  search.rs
src/crackme/: latest.rs  list.rs  mod.rs  overview.rs  search.rs
src/mode/: get.rs  latest.rs  mod.rs  search.rs
