[package]
name = "cmg"
version = "0.1.0"
authors = ["abyss <derribado@tutanota.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
argh = "0.1.4"
reqwest = { version = "0.11.3", features = ["cookies"] }
scraper = "0.12.0"
tokio = { version = "1.5.0", features = ["full"] }
zip = "0.5.12"
