[package]
name = "cm-client"
version = "0.2.0"
authors = ["abyss <derribado@tutanota.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.40"
reqwest = { version = "0.11.3", features = ["cookies"] }
crackmes = { path = "../crackmes" }
skim = "0.9.4"
structopt = "0.3.21"
tokio = { version = "1.5.0", features = ["full"] }
# FIXME once zip-rs allows invalid passwords or if there is a bug in the
# password verification that is fixed, we can use upstream zip
zip = { git = "https://github.com/BenjaminRi/zip-rs", branch = "infozip-decrypt" }
crossterm = { version = "0.19.0", features = ["event-stream"] }
tui = { version = "0.15.0", default-features = false, features = ["crossterm"] }
futures-util = "0.3.14"
fuzzy-matcher = "0.3.7"

[[bin]]
path = "src/main.rs"
name = "cmc"

