[package]
name = "crackmes"
version = "0.3.0"
authors = ["abyss <derribado@tutanota.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.12.0"
strum = { version = "0.20.0", features = ["derive"] }
thiserror = "1.0.24"
